...
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="medicines">
        <NativeTabs.Trigger.Icon
          sf={nativeTabIcons.medicines.sf}
          md={nativeTabIcons.medicines.md}
        />
        <NativeTabs.Trigger.Label>Medicines</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>
    </NativeTabs>
  );
}

